--- a/www/custom.css
+++ b/www/custom.css
@@ -73,7 +73,7 @@
 .settings-bar-content {
   padding: 0.5em 2%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   gap: 0.5em;
 }
