--- a/www/custom.css
+++ b/www/custom.css
@@ -73,7 +73,7 @@
 .settings-bar-content {
   padding: 0.5em 2%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   gap: 0.5em;
 }
@@ -83,7 +83,7 @@
   display: flex;
   align-items: center;
   gap: 0.5em;
-  margin-right: 0.5em;
+  margin-right: auto;
   padding: 0.5em 1em;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 0.25em;
