--- a/www/custom.css
+++ b/www/custom.css
@@ -83,11 +83,15 @@
   display: flex;
   align-items: center;
   gap: 0.5em;
-  margin-right: auto;
+  margin-right: 0.5em;
   padding: 0.5em 1em;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 0.25em;
   font-size: 0.9em;
+}
+
+#custom-build-badge {
+  margin-right: auto;
 }
 
 .status-indicator {
