--- a/www/custom.css
+++ b/www/custom.css
@@ -185,6 +185,10 @@
     gap: 0.5em;
   }
   
+  .asu-status {
+    align-self: flex-start;
+  }
+  
   .right-section {
     width: 100%;
     gap: 0.5em;
