--- a/www/custom.css
+++ b/www/custom.css
@@ -64,7 +64,12 @@
 /* settings-barよりも上に確実に表示されるようにz-indexを調整 */
 /* DOM順序で#settings-barの前に配置されるため、position: absoluteのまま維持 */
 #alert {
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
   z-index: 1002 !important;
+  margin: 0 !important;
 }
 
 /* ===== Settings Import/Export Bar ===== */
