--- a/www/custom.css
+++ b/www/custom.css
@@ -596,7 +596,8 @@ details summary::-webkit-details-marker {
 
 /* ===== Section Containers ===== */
 .config-section,
-.package-category {
+.package-category,
+.conditional-section {
   margin: 0 0 1.5em 0;
   padding: 0 1em 1em 1em;
   background-color: var(--bg-section);
